add system restart API
